--- a/newtab.html
+++ b/newtab.html
@@ -7,12 +7,14 @@
 </head>
 <body>
   <header>
-    <h1>YouTube Dev Feed</h1>
+    <h1>Shopify Tab</h1>
   </header>
   <main>
-    <div id="loading">Loading...</div>
-    <div id="error-message" style="display: none; color: #ff0000; margin: 20px; text-align: center;"></div>
-    <div id="videos-container" class="videos-grid"></div>
+    <div class="container">
+      <div id="loading">Loading...</div>
+      <div id="error-message" style="display: none; color: #ff0000; margin: 20px; text-align: center;"></div>
+      <div id="videos-container" class="videos-grid"></div>
+    </div>
   </main>
   <script src="newtab.js"></script>
 </body>
