--- a/newtab.html
+++ b/newtab.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>YouTube Dev Feed</title>
+  <title>Shopify Tab</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
