Create channels.js file

--- a/newtab.html
+++ b/newtab.html
@@ -24,6 +24,6 @@
       <div id="videos-container" class="videos-grid"></div>
     </div>
   </main>
-  <script src="newtab.js"></script>
+  <script type="module" src="newtab.js"></script>
 </body>
 </html>
