Add category filter

--- a/newtab.html
+++ b/newtab.html
@@ -11,6 +11,12 @@
       <h1>Shopify Tab</h1>
     </div>
     <div class="header-right">
+      <select id="category-filter" class="category-filter">
+        <option value="all">All Categories</option>
+        <option value="shopify">Shopify</option>
+        <option value="ecommerce">E-commerce</option>
+        <option value="development">Development</option>
+      </select>
       <button id="refresh-btn" class="refresh-btn">
         <span class="refresh-icon">🔄</span>
         <span class="refresh-text">Refresh</span>
